@@ -2254,7 +2254,7 @@ class LinkDotResolveVisitor final : public VNVisitor {
                                          // (except the default instances)
                                          // They are added to the set only in linkDotPrimary.
     bool m_insideClassExtParam = false;  // Inside a class from m_extendsParam
-    bool m_explicitSuperNew = false;  // Hit a "super.new" call inside a "new" function
+    AstNew* m_explicitSuperNewp = nullptr;  // Hit a "super.new" call inside a "new" function
     std::map<AstNode*, AstPin*> m_usedPins;  // Pin used in this cell, map to duplicate
     std::map<std::string, AstNodeModule*> m_modulesToRevisit;  // Modules to revisit a second time
     AstNode* m_lastDeferredp = nullptr;  // Last node which requested a revisit of its module
@@ -2354,12 +2354,16 @@ class LinkDotResolveVisitor final : public VNVisitor {
             return nullptr;
         }
     }
-    AstNodeStmt* addImplicitSuperNewCall(AstFunc* nodep) {
+    AstNodeStmt* addImplicitSuperNewCall(AstFunc* const nodep,
+                                         const AstClassExtends* const classExtendsp) {
         // Returns the added node
         FileLine* const fl = nodep->fileline();
+        AstNodeExpr* pinsp = nullptr;
+        if (classExtendsp->argsp()) pinsp = classExtendsp->argsp()->cloneTree(true);
+        AstNew* const newExprp = new AstNew{fl, pinsp};
+        newExprp->isImplicit(true);
         AstDot* const superNewp
-            = new AstDot{fl, false, new AstParseRef{fl, VParseRefExp::PX_ROOT, "super"},
-                         new AstNew{fl, nullptr}};
+            = new AstDot{fl, false, new AstParseRef{fl, VParseRefExp::PX_ROOT, "super"}, newExprp};
         AstNodeStmt* const superNewStmtp = superNewp->makeStmt();
         for (AstNode* stmtp = nodep->stmtsp(); stmtp; stmtp = stmtp->nextp()) {
             // super.new shall be the first statement (IEEE 1800-2023 8.15)
@@ -3982,17 +3986,33 @@ class LinkDotResolveVisitor final : public VNVisitor {
         }
         VL_RESTORER(m_curSymp);
         VL_RESTORER(m_ftaskp);
+        VL_RESTORER(m_explicitSuperNewp);
         {
             m_ftaskp = nodep;
             m_ds.m_dotSymp = m_curSymp = m_statep->getNodeSym(nodep);
             const bool isNew = nodep->name() == "new";
-            if (isNew) m_explicitSuperNew = false;
+            if (isNew) m_explicitSuperNewp = nullptr;
             iterateChildren(nodep);
-            if (isNew && !m_explicitSuperNew && m_statep->forParamed()) {
+            if (isNew) {
                 const AstClassExtends* const classExtendsp = VN_AS(m_modp, Class)->extendsp();
+                if (m_explicitSuperNewp && !m_explicitSuperNewp->isImplicit()
+                    && classExtendsp->argsp()) {
+                    m_explicitSuperNewp->v3error(
+                        "Explicit super.new not allowed with class "
+                        "extends arguments (IEEE 1800-2023 8.17)\n"
+                        << m_explicitSuperNewp->warnMore() << "... Suggest remove super.new\n"
+                        << m_explicitSuperNewp->warnContextPrimary() << '\n'
+                        << classExtendsp->argsp()->warnOther()
+                        << "... Location of extends argument(s)\n"
+                        << classExtendsp->argsp()->warnContextSecondary());
+                }
                 if (classExtendsp && classExtendsp->classOrNullp()) {
-                    AstNodeStmt* const superNewp = addImplicitSuperNewCall(VN_AS(nodep, Func));
-                    iterate(superNewp);
+                    if (!m_explicitSuperNewp && m_statep->forParamed()) {
+                        AstNodeStmt* const superNewp
+                            = addImplicitSuperNewCall(VN_AS(nodep, Func), classExtendsp);
+                        UINFO(9, "created super new " << superNewp << endl);
+                        iterate(superNewp);
+                    }
                 }
             }
         }
@@ -4356,12 +4376,14 @@ class LinkDotResolveVisitor final : public VNVisitor {
         LINKDOT_VISIT_START();
         checkNoDot(nodep);
         // Check if nodep represents a super.new call;
-        if (VN_IS(nodep->exprp(), New)) {
+        if (AstNew* const newExprp = VN_CAST(nodep->exprp(), New)) {
             // in this case it was already linked, so it doesn't have a super reference
-            m_explicitSuperNew = true;
+            m_explicitSuperNewp = newExprp;
         } else if (const AstDot* const dotp = VN_CAST(nodep->exprp(), Dot)) {
-            if (dotp->lhsp()->name() == "super" && VN_IS(dotp->rhsp(), New)) {
-                m_explicitSuperNew = true;
+            if (dotp->lhsp()->name() == "super") {
+                if (AstNew* const newExprp = VN_CAST(dotp->rhsp(), New)) {
+                    m_explicitSuperNewp = newExprp;
+                }
             }
         }
         iterateChildren(nodep);
