@@ -1,36 +1,44 @@
 // DESCRIPTION: Verilator: Verilog Test module
 //
 // This file ONLY is placed under the Creative Commons Public Domain, for
-// any use, without warranty, 2020 by Wilson Snyder.
+// any use, without warranty, 2025 by Wilson Snyder.
 // SPDX-License-Identifier: CC0-1.0
 
-class Base1;
-   int s = 2;
+`define stop $stop
+`define checkh(gotv,expv) do if ((gotv) !== (expv)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", `__FILE__,`__LINE__, (gotv), (expv), `"gotv`", `"expv`"); `stop; end while(0);
+
+class Base;
+   int m_s = 2;
    function new(int def = 3);
-      s = def;
+      m_s = def;
    endfunction
 endclass
 
-class Cls1 extends Base1(default);
-   // Gets new(int def)
+class Cls5Exp extends Base(5);
+   int m_a = 11;
+   function new(int def = 42);  // Explicit new
+      m_a = def;
+   endfunction
 endclass
 
-class Cls5 extends Base1(5);
-   // Gets new()
+class Cls5Imp extends Base(5);
+   int m_a = 12;
+   // Implicit new
 endclass
 
-module t (/*AUTOARG*/);
+module t ();
+
+   Cls5Exp ce;
+   Cls5Imp ci;
+
    initial begin
-      Cls1 c1;
-      Cls1 c5;
-      c1 = new(57);
-      if (c1.s !== 57) $stop;
-
-      c5 = new;
-      if (c5.s !== 5) $stop;
-
+      ce = new(37);
+      `checkh(ce.m_s, 5);
+      `checkh(ce.m_a, 37);
+      ci = new;
+      `checkh(ci.m_s, 5);
+      `checkh(ci.m_a, 12);
       $write("*-* All Finished *-*\n");
       $finish;
    end
-
 endmodule
